# Physical-AI-And-Humanoid-Robotics-Textbook

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION-COMPLETE.md  README.md  TESTING_INTERESTS.md  TESTING_PERSONALIZATION.md  TESTING_SUMMARIZATION.md  TESTING_TRANSLATION.md  package-lock.json  test-chat.json
.claude/: settings.local.json
backend/: .dockerignore  .env.example  =0.26.0  DEPLOY.md  Dockerfile  README-HF.md  README.md  agent_config.py  fix_imports.py  main.py  pyproject.toml  requirements-hf.txt  requirements.txt  test_cohere.py  tools.py  vercel.json
backend/data/: conversations.db-shm  conversations.db-wal
backend/database/: __init__.py  connection.py
backend/middleware/: __init__.py  auth_middleware.py
backend/migrations/: 001_create_user_profiles_and_interests.sql  002_seed_interest_categories.sql  006_create_auth_tables.sql  007_fix_user_interests_constraint.sql  README.md  run_migrations.py
backend/models/: __init__.py  auth.py  chat.py  interests.py  summarization.py  translation.py
backend/repositories/: __init__.py  base_repository.py  user_interests_repository.py  user_repository.py
backend/services/: __init__.py  auth_service.py  interests_service.py  personalization_service.py  summarization_service.py  translation_service.py
backend/utils/: __init__.py  errors.py  password_hasher.py  text_processing.py  token_manager.py
website/: .env.example  _headers  components.json  docusaurus.config.ts  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  sidebars.ts  tailwind.config.js  vercel.json
(+253 files in other folders)
